// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Widgets /> should not wrap a widget which is not a grid and has no height 1`] = `
<Widgets
  components={
    Object {
      "@shopgate/commerce-widgets/image": [Function],
      "@shopgate/commerce-widgets/widget-grid": [Function],
    }
  }
  widgets={
    Array [
      Object {
        "col": 0,
        "row": 0,
        "settings": Object {
          "id": 83535,
          "image": "https://data.shopgate.com/shop_widget_images/23836/92204c0f264ac30d6836994c2fb64eb1.min.jpeg",
        },
        "type": "@shopgate/commerce-widgets/image",
        "width": 12,
      },
    ]
  }
>
  <div>
    <Image
      col={0}
      key="w0"
      row={0}
      settings={
        Object {
          "id": 83535,
          "image": "https://data.shopgate.com/shop_widget_images/23836/92204c0f264ac30d6836994c2fb64eb1.min.jpeg",
        }
      }
      type="@shopgate/commerce-widgets/image"
      width={12}
    >
      <img
        alt=""
      />
    </Image>
  </div>
</Widgets>
`;

exports[`<Widgets /> should render a grid if the widget is of type grid 1`] = `
<Widgets
  components={
    Object {
      "@shopgate/commerce-widgets/image": [Function],
      "@shopgate/commerce-widgets/widget-grid": [Function],
    }
  }
  widgets={
    Array [
      Object {
        "settings": Object {
          "widgets": Array [
            Object {
              "col": 0,
              "height": 5,
              "row": 0,
              "settings": Object {
                "alt": "",
                "id": "84961",
                "image": "https://data.shopgate.com/shop_widget_images/23836/aedc545959f55e3f73851eca0ed40a75.min.jpeg",
                "link": "/category/",
              },
              "type": "@shopgate/commerce-widgets/image",
              "width": 12,
            },
          ],
        },
        "type": "@shopgate/commerce-widgets/widget-grid",
      },
    ]
  }
>
  <div>
    <WidgetGrid
      components={
        Object {
          "@shopgate/commerce-widgets/image": [Function],
          "@shopgate/commerce-widgets/widget-grid": [Function],
        }
      }
      config={
        Array [
          Object {
            "col": 0,
            "height": 5,
            "row": 0,
            "settings": Object {
              "alt": "",
              "id": "84961",
              "image": "https://data.shopgate.com/shop_widget_images/23836/aedc545959f55e3f73851eca0ed40a75.min.jpeg",
              "link": "/category/",
            },
            "type": "@shopgate/commerce-widgets/image",
            "width": 12,
          },
        ]
      }
      key="w0"
    >
      <div
        className={
          Object {
            "data-css-jldvt6": "",
          }
        }
      >
        <Widget
          component={[Function]}
          config={
            Object {
              "col": 0,
              "height": 5,
              "row": 0,
              "settings": Object {
                "alt": "",
                "id": "84961",
                "image": "https://data.shopgate.com/shop_widget_images/23836/aedc545959f55e3f73851eca0ed40a75.min.jpeg",
                "link": "/category/",
              },
              "type": "@shopgate/commerce-widgets/image",
              "width": 12,
            }
          }
          key="w0"
        >
          <GridItem
            className="css-14cdwhd"
            component="div"
            grow={0}
            shrink={1}
          >
            <div
              className="css-14cdwhd"
            >
              <div>
                <Suspense
                  fallback={<Loading />}
                >
                  <Image
                    ratio={
                      Array [
                        12,
                        5,
                      ]
                    }
                    settings={
                      Object {
                        "alt": "",
                        "id": "84961",
                        "image": "https://data.shopgate.com/shop_widget_images/23836/aedc545959f55e3f73851eca0ed40a75.min.jpeg",
                        "link": "/category/",
                      }
                    }
                  >
                    <img
                      alt=""
                    />
                  </Image>
                </Suspense>
              </div>
            </div>
          </GridItem>
        </Widget>
      </div>
    </WidgetGrid>
  </div>
</Widgets>
`;

exports[`<Widgets /> should render only one widget when the second one is not published and third one is invalid 1`] = `
<Widgets
  components={
    Object {
      "@shopgate/commerce-widgets/image": [Function],
      "@shopgate/commerce-widgets/widget-grid": [Function],
    }
  }
  widgets={
    Array [
      Object {
        "col": 0,
        "row": 0,
        "settings": Object {
          "id": 835351,
          "image": "https://data.shopgate.com/shop_widget_images/23836/92204c0f264ac30d6836994c2fb64eb1.min.jpeg",
        },
        "type": "@shopgate/commerce-widgets/image",
        "width": 12,
      },
      Object {
        "col": 0,
        "row": 0,
        "settings": Object {
          "id": 835352,
          "image": "https://data.shopgate.com/shop_widget_images/23836/92204c0f264ac30d6836994c2fb64eb1.min.jpeg",
        },
        "type": "@shopgate/commerce-widgets/imagefoo",
        "width": 12,
      },
      Object {
        "col": 0,
        "row": 0,
        "settings": Object {
          "id": 835353,
          "image": "https://data.shopgate.com/shop_widget_images/23836/92204c0f264ac30d6836994c2fb64eb1.min.jpeg",
          "published": false,
        },
        "type": "@shopgate/commerce-widgets/image",
        "width": 12,
      },
    ]
  }
>
  <div>
    <Image
      col={0}
      key="w0"
      row={0}
      settings={
        Object {
          "id": 835351,
          "image": "https://data.shopgate.com/shop_widget_images/23836/92204c0f264ac30d6836994c2fb64eb1.min.jpeg",
        }
      }
      type="@shopgate/commerce-widgets/image"
      width={12}
    >
      <img
        alt=""
      />
    </Image>
  </div>
</Widgets>
`;
